src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ARR_Currency__c</fullName>
        <description>ARR field with currency</description>
        <label>ARR (do not use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field underwent change in project a7z3s0000004SGsAAM whereby a pre-deployment manual step changed its datatype from number to currency and it became automatically calculated based on opportunitylineitem inputs and assumptions. The deployed layout also made it read only on the layout so that non admins are not seeing the pencil on it. Trigger logic was employed to do the auto calculation of &quot;subscription__c&quot; line items and only those associated to non-won, non-closed Opportunity Stages.</description>
        <inlineHelpText>Project SFDC-0145 (Jan9&apos;21) changes the datatype from number to currency (no historic data migration) and is auto-calculated whenever oppline is &quot;subscription&quot; and Opportunity Stage is Open and &lt;=Sales Ops Review, based on line inputs/assumptions</inlineHelpText>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_ID__c</fullName>
        <label>Assigned User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn_Customer_Contact__c</fullName>
        <inlineHelpText>Populate if a Aura Marketplace order. Name of person that will be accepting the Marketplace order. If others should receive the Marketplace order, rep will send an email to Deals Desk with names and emails.</inlineHelpText>
        <label>Customer Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aura_Annual_Credit_Amount__c</fullName>
        <label>Annual Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aura_Private_Offer_Annual_Credit_Amount__c</fullName>
        <description>Gross Amount for Private Offers. Required whenever product name contains &quot;Subscription - Aura Enterprise&quot;Field introduced in SFDC-0542.</description>
        <inlineHelpText>Populate for Marketplace (MP) order. MP orders identified by Partner name and Partner Type = Fulfillment, Field is Local Gross amount (do not deduct MP Margin). This amt will be submitted in the MP Order which Deals Desk creates and submits.</inlineHelpText>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <description>Added in a7z3s0000004SGsAAM during migration of term fields from Opportunity to OpportunityLineItem</description>
        <inlineHelpText>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity. This is manually populated and does not influence automation.</inlineHelpText>
        <label>Auto Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Provider__c</fullName>
        <description>Field introduced in SFDC-0542.</description>
        <inlineHelpText>Populate if this is an Aura Product Line Item</inlineHelpText>
        <label>Cloud Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Region__c</fullName>
        <description>Regions are physical locations around the world where data clusters are available for a particular provider selected from the &quot;Cloud Provider&quot; picklist. Get the list from Product Team for this picklist (SFDC-0542); JIRA: SFDCSPT-298</description>
        <inlineHelpText>Regions are physical locations around the world where data clusters are available for a particular provider selected from the &quot;Cloud Provider&quot; picklist. Populate if this is an Aura Product Line Item.</inlineHelpText>
        <label>Cloud Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cloud_Provider__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific (Hong Kong) Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Mumbai) Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Osaka) Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Seoul) Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Singapore) Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Sydney) Region</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific (Tokyo) Region</fullName>
                </value>
                <value>
                    <fullName>AWS Africa (Cape Town) Region</fullName>
                </value>
                <value>
                    <fullName>BELGIUM (europe-west1)</fullName>
                </value>
                <value>
                    <fullName>Canada (Central) Region</fullName>
                </value>
                <value>
                    <fullName>Europe (Frankfurt) Region</fullName>
                </value>
                <value>
                    <fullName>Europe (Ireland) Region</fullName>
                </value>
                <value>
                    <fullName>Europe (London) Region</fullName>
                </value>
                <value>
                    <fullName>Europe (Milan) Region</fullName>
                </value>
                <value>
                    <fullName>Europe (Paris) Region</fullName>
                </value>
                <value>
                    <fullName>Europe (Stockholm) Region</fullName>
                </value>
                <value>
                    <fullName>FINLAND (europe-north1)</fullName>
                </value>
                <value>
                    <fullName>FRANKFURT (europe-west3)</fullName>
                </value>
                <value>
                    <fullName>GovCloud (US-East) Region</fullName>
                </value>
                <value>
                    <fullName>GovCloud (US-West) Region</fullName>
                </value>
                <value>
                    <fullName>HONG KONG (asia-east2)</fullName>
                </value>
                <value>
                    <fullName>IOWA (us-central1)</fullName>
                </value>
                <value>
                    <fullName>JAKARTA (asia-southeast2)</fullName>
                </value>
                <value>
                    <fullName>LAS VEGAS (us-west4)</fullName>
                </value>
                <value>
                    <fullName>LONDON (europe-west2)</fullName>
                </value>
                <value>
                    <fullName>LOS ANGELES (us-west2)</fullName>
                </value>
                <value>
                    <fullName>Mainland China (Beijing) Region</fullName>
                </value>
                <value>
                    <fullName>Mainland China (Ningxia) Region</fullName>
                </value>
                <value>
                    <fullName>Middle East (Bahrain) Region</fullName>
                </value>
                <value>
                    <fullName>MONTRÉAL (northamerica-northeast1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Utilization_GB__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cloud Utilization (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Utilization_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cloud Utilization (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Price_Discount_Percentage__c</fullName>
        <description>Field introduced in SFDC-0542.</description>
        <inlineHelpText>Populate if this is an Aura Product Line Item</inlineHelpText>
        <label>Contract Price Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Terms__c</fullName>
        <description>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity.</description>
        <inlineHelpText>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity.</inlineHelpText>
        <label>Contract Terms (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cores_Per_Production_Instance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cores Per Production Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTA_Annual_Fee_USD__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <defaultValue>0</defaultValue>
        <description>DTA Annual fee is the amount that we pay our partner, DTA, to deliver the managed services that we contract with our end customer. For example, for customer Acme, the CMS amount they pay to Neo4j might be $150K ARR, but, of that we might have to pay DTA $60K. We need a record of that such that we can run reports including margins, etc, and have a single place where we can record what portion of the agreement is due to DTA.</description>
        <inlineHelpText>The amount that we pay our partner, DTA, to deliver the managed services that we contract with our end customer.</inlineHelpText>
        <label>DTA Annual Fee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_Custom__c</fullName>
        <label>Long Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EligibleForSAOCredit__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Product associated with this Opportunity Line Item qualifies for SAO credit. Only subscription products that can be sold on a stand-alone basis for new projects qualify. New projects are defined as either new customers or cross-sell opportunities with existing customers JIRA: SFDCSPT-661</description>
        <inlineHelpText>Indicates whether the Product associated with this Opportunity Line Item qualifies for SAO credit. Only subscription products that can be sold on a stand-alone basis for new projects qualify. New projects are defined as either new customers or cross-sell opportunities with existing customers.</inlineHelpText>
        <label>Eligible for SAO Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Rollover_Details__c</fullName>
        <inlineHelpText>Populate if Eligible for Rollover is &quot;Yes&quot; with data that is not included in other fields in SFDC such as other quaifications to be eligible for rollover.</inlineHelpText>
        <label>Eligible for Rollover Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Rollover__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Field introduced in SFDC-0542. Requirement was that it defaults to No (notice: doing so will default to &quot;No&quot; on _all_ OpportunityLineItems)</description>
        <inlineHelpText>Populate if this is an Aura Product Line Item. Select &quot;Yes&quot; if eligible for rollover which means they signed a Multi-Year Deal.</inlineHelpText>
        <label>Eligible for Rollover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_Needs_to_be_Provisioned__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>Indicates whether environment needs to be provisioned in relation to this implementation. JIRA: SFDCSPT-288; SFDCSPT-297</description>
        <inlineHelpText>Indicate whether we need to provision an environment for this implementation.</inlineHelpText>
        <label>Environment Needs to be Provisioned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalTerritory__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>Indicates what global region the Product Account is part of based on the shipping country listed on the Account record. JIRA: SFDCSPT-268</description>
        <formula>Opportunity.Account.Global_Territory__c</formula>
        <inlineHelpText>Indicates what global region the Product Account is part of based on the shipping country listed on the Account record.</inlineHelpText>
        <label>Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_RLI_Name__c</fullName>
        <label>Historic RLI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Provisioned__c</fullName>
        <description>Field introduced in SFDC-0542. Requirement was that it defaults to No (notice: doing so will default to &quot;No&quot; on _all_ OpportunityLineItems). Date acquired from provisioning email. Term start date can not be prior to this date. To be populated by Deals Desk / Sales Ops</description>
        <inlineHelpText>Populate if this is an Aura Product Line Item. Date acquired from provisioning email. Term start date can not be prior to this date. Field to be populated by Deals Desk / Sales Ops.</inlineHelpText>
        <label>Instance Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <description>Added in a7z3s0000004SGsAAM during migration of term fields from Opportunity to OpportunityLineItem</description>
        <inlineHelpText>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity. This is manually populated and does not currently drive any salesforce database automation.</inlineHelpText>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Progress Billing</fullName>
                </value>
                <value>
                    <fullName>Bill Upon Completion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Item_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Contract_Price_per_GB_for_Aura__c</fullName>
        <description>preCPQ. List Contract Price per GB (Aura).  Will be Driven (logic=wip) by Vlookup when oli changes. Logic will leverage AuraCurrencyListPrice__c.currencyIsoCode  &amp; AuraCurrencyListPrice__c.currencyValue__c pairings, or is left null. Field introduced in SFDC-0542. Editable by system admins.</description>
        <inlineHelpText>Non-Editiable field. Local List Contract Price per GB base on List Price in USD of 0.25. FX updated once a year, last updated 1/3/21.</inlineHelpText>
        <label>List Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYC_Contract_Amount__c</fullName>
        <description>Added in a7z3s0000004SGsAAM during migration of term fields from Opportunity to OpportunityLineItem</description>
        <inlineHelpText>Narrowly visible. Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity. This is manually populated and does not currently drive any salesforce database automation.</inlineHelpText>
        <label>MYC Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketplace_Expiration_Date__c</fullName>
        <description>changed api name on 2021-01-21T14:15:31-0800 previously was PO_Expiration_Date__c</description>
        <inlineHelpText>Populate if Marketplace order. Date that the Private Offer expires (similar to discount expirations)</inlineHelpText>
        <label>Marketplace Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Type__c</fullName>
        <description>As of Dec&apos;20/Jan9&apos;21 this field resides on the line level, replacing a similar field that previously existed on Opportunity (No data migration). This is manually populated and does not currently drive any salesforce database automation.</description>
        <inlineHelpText>As of Dec&apos;20/Jan9&apos;21 this field resides on the line level, replacing a similar field that previously existed on Opportunity (No data migration). This is manually populated and does not currently drive any salesforce database automation.</inlineHelpText>
        <label>Multi-Year Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi-Year Contractual</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Prepaid</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Prepaid and Contractual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_or_Cross_Sell__c</fullName>
        <description>Evaluates to 1 if New or Cross-sell is selected as the type. Necessary for the workflow to notify support a new customer has moved to 99%.</description>
        <formula>IF(or(ISPICKVAL(Product_Type__c, &quot;New&quot;),ISPICKVAL(Product_Type__c, &quot;Cross-Sell&quot;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New or Cross Sell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Product_ID__c</fullName>
        <description>Field to store the original product ID that the renewal product was created after</description>
        <label>Original Product ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Use_Case__c</fullName>
        <label>&quot;Other&quot; Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Executor_Email__c</fullName>
        <description>Field introduced in SFDC-0542. This is currently visible only to system admins. Email for person who accepts private offer. Currently visible only to system admins. Required whenever product name contains &quot;Subscription - Aura Enterprise&quot;</description>
        <inlineHelpText>Populate if a Aura Marketplace order. Email of person that will be accepting the Marketplace order. If others should receive the Marketplace order, rep will send an email to Deals Desk with names and emails.</inlineHelpText>
        <label>Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO_Expiration_Date__c</fullName>
        <inlineHelpText>Date that the Private Offer expires (similar to discount expirations)</inlineHelpText>
        <label>PO Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Added in a7z3s0000004SGsAAM during migration of term fields from Opportunity to OpportunityLineItem</description>
        <inlineHelpText>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity. This is manually populated and does not currently drive any salesforce database automation.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 75</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>Net 180</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <label>Perpetual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_ID__c</fullName>
        <description>Field introduced in SFDC-0542. Chose 40 length arbitrarily.  People copy this into sfdc when were told the private offer was accepted. Made available via the Permission Set named &quot;SFDC_0542_Some_Aura_Fields_for_SOPS_Internally&quot;. Required whenever product name contains &quot;Subscription - Aura Enterprise&quot; and Partner Name = Google, Azure, AWS and Partner Type = Fulfillment</description>
        <inlineHelpText>Acceptance ID from Marketplace Order. Deals Desk will populate.</inlineHelpText>
        <label>Platform ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Offer_Status__c</fullName>
        <description>Field introduced in SFDC-0542.</description>
        <inlineHelpText>Required whenever product name contains &quot;Subscription - Aura Enterprise&quot;.</inlineHelpText>
        <label>Private Offer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Forecast_ARR__c</fullName>
        <description>Converting ARR to currency field to implement forecasting</description>
        <formula>ARR__c* CURRENCYRATE(Text(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Forecast ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group_Traction__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnprod</businessOwnerUser>
        <description>This field is part of of Traction tool implementation. Not to be confused with the standard &quot;Product Code&quot; field. Designed to group products into distinct categories to display category icons in the Traction Account hierarchy views on the Account records. JIRA: SFDCSPT-96</description>
        <inlineHelpText>Shows what distinct category a Product belongs to. Category icons are displayed in the Traction Account hierarchy views on the Account records.</inlineHelpText>
        <label>Product Group (Traction)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>SFDC-0488_AuraProvisioningEmailForLanceKajiV1. This field exists to workaround an unplanned salesforce 13+ year old SFDC GA limitation: https://trailblazer.salesforce.com/ideaView?id=08730000000BrUAAA0.  The accuracy of this field needs to be recalculated if product names ever change!   Rule of thumb:  retire products, dont rename them , technically-speaking.  This text field exists so that rollups can refer to it,  because rollups cannot refer to formula fields.  At time of writing we will do a one-time mass update into this field and maintain it with synchronous logic at the OpportunityLineItem level.</description>
        <inlineHelpText>This field takes its value from the name of the Product that this Opportunity Line represents.</inlineHelpText>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <description>This field is to specify whether the Opportunity Item is New, Up-Sell, Cross-Sell or Renewal.</description>
        <inlineHelpText>Select one of the applicable values from the picklist.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Up-Sell</fullName>
                </value>
                <value>
                    <fullName>Cross-Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Production Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profession_Services_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Profession Services Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professional_Services2__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>This Field was created because of the SF limitations captured here: https://trailblazer.salesforce.com/ideaView?id=08730000000DfL5AAK 

The field is updated by the Apex Class: OpportunityLineItemTriggerHelper based on the value of the corresponding field on the Product object -  Professional_Services__c. If the checkbox at the Product level is checked, when an Opportunity Line Item is created (Product is attached to Opportunity), this checkbox field is checked. The Prof_Services_Product_Count__c Rollup Summary field on the Opportunity object displays the total number of OLIs where this checkbox is checked. JIRA: SFDCSPT-529</description>
        <inlineHelpText>This is a system fields managed on the backend by the System Admins. It&apos;s automatically updated and non-editable to the end user.</inlineHelpText>
        <label>Professional Services2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Expiration_Date__c</fullName>
        <label>Professional Services Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Hourly_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Professional Services Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Professional_Services__c</fullName>
        <formula>PricebookEntry.Product2.Professional_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Field to capture project name for product line items; Length increased from 24 to 50 on 2020-12-15 to fit a value sales ops needed which was Customer Complaint Database;</description>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_ARR_USD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please note that numbers in Quota fields are prelim until statements are received</inlineHelpText>
        <label>Quota ARR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_ARR__c</fullName>
        <label>Quota ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Non_ARR_USD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please note that numbers in Quota fields are prelim until statements are received</inlineHelpText>
        <label>Quota Non-ARR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Non_ARR__c</fullName>
        <label>Quota Non-ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAM_Capacity__c</fullName>
        <description>Field introduced in SFDC-0542.</description>
        <inlineHelpText>Ram Capacity in terms of Gigabytes (GB). Populate if this is an Aura Product Line Item If # not in drop down please contact Salesforce@neo4j.com</inlineHelpText>
        <label>RAM Capacity (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RLI_Amount_US_Dollar__c</fullName>
        <label>RLI Amount (US Dollar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RLI_Amount__c</fullName>
        <label>RLI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequiresOnboarding__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Product associated with this Opportunity Line Item requires that Customer Success onboard the customer. JIRA: SFDCSPT-449</description>
        <inlineHelpText>Indicates whether the Product associated with this Opportunity Line Item requires that Customer Success onboard the customer.</inlineHelpText>
        <label>Requires Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Line_Item_Name__c</fullName>
        <label>Revenue Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RolloverPercent__c</fullName>
        <description>Field introduced in SFDC-0542. Requirement at inception was to prevent values higher than twenty percent (validation rule) and to require a value when Eligible_for_Rollover__c is &quot;Yes&quot;</description>
        <inlineHelpText>Required to be populated if Eligible for Rollover is &quot;Yes&quot;.</inlineHelpText>
        <label>Rollover %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>